...
		switch self {
		case .day:
			return "Today"
		case .week:
			return "Week"
		case .month:
			return "Month"
		case .year:
			return "Year"
		case .all:
			return "All"
		}
	}
...
