...
	static func toFullName(abbreviation: MarketAbbreviation?) -> String {
		
		guard let abbreviation = abbreviation else { return "Unknown" }
		
		switch abbreviation {
		case .btc:
			return "Bitcoin"
		case .xmr:
			return "Monero"
		case .eth:
			return "Ethereum"
		case .etc:
			return "Ethereum Classic"
...
